--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
 
 <!DOCTYPE html>
-<html>
+<html ng-app="PetApp">
 <head>
-  <title>Project 3</title>
+  <title>Pet Friendly App</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
+  <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+  <link rel="stylesheet" href="/css/style.css">
+
+
+
 </head>
 <body>
-  <h1>Project 3 page</h1>
+  <h1>Pet Friendly App</h1>
 
+
+
+  
+  <main ui-view></main>
 </body>
 </html>
