--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,60 @@
 
 <!DOCTYPE html>
-<html ng-app="PetApp">
+<html ng-app="wdi-project-3">
 <head>
   <title>Pet Friendly App</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
   <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="/js/app.js"></script>
 
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
-
-
-
 </head>
 <body>
+  <header>
+    <nav>  
+   
+      <div class="container">
+        <nav class="navbar navbar-light bg-faded">
+          <a class="navbar-brand" ui-sref="home">Pet App</a>
+          <ul class="nav navbar-nav">
+            <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
+              <a class="nav-link" ui-sref="index">Index</a>
+            </li>
+            <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+              <a class="nav-link" ui-sref="register">Register</a>
+            </li>
+            <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+              <a class="nav-link" ui-sref="login">Login</a>
+            </li>
+            <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
+              <a class="nav-link" ui-sref="edit">Edit</a>
+            </li>
+
+
+
+          </ul>
+        </nav>
+      </div>   
+  </header>  
+
   <h1>Pet Friendly App</h1>
-
-
-
   
   <main ui-view></main>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
