frontend authentication added

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
 
   <script src="/js/controllers/pets/index.js"></script>
   <script src="/js/controllers/main.js"></script>
+  <script src="/js/controllers/login.js"></script>
+  <script src="/js/controllers/register.js"></script>
   <script src="/js/models/pet.js"></script>
   <script src="/js/models/user.js"></script>
+  <script src="/js/services/tokenService.js"></script>
+  <script src="/js/services/authInterceptor.js"></script>
+
+  <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
 
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -19,31 +25,33 @@
 </head>
 <body>
   <main ng-controller="MainController as main">
-    <header>
-      <nav>  
-     
-        <div class="container">
-          <nav class="navbar navbar-light bg-faded">
-            <a class="navbar-brand" ui-sref="home">Pet App</a>
-            <ul class="nav navbar-nav">
-              <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
-                <a class="nav-link" ui-sref="index">Index</a>
-              </li>
-              <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
-                <a class="nav-link" ui-sref="register">Register</a>
-              </li>
-              <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
-                <a class="nav-link" ui-sref="login">Login</a>
-              </li>
-          
-
-            </ul>
-          </nav>
-        </div>   
-    </header>  
-
-  <h1>Pet Friendly App</h1>
-  
+    <div class="container">  
+        <header>
+          <nav>  
+            <div class="container">
+              <nav class="navbar navbar-light bg-faded">
+                <a class="navbar-brand" ui-sref="home">Pet App</a>
+                <ul class="nav navbar-nav">
+                  <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+                    <a class="nav-link" ui-sref="index">Index</a>
+                  </li>
+                  <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+                    <a class="nav-link" ui-sref="register">Register</a>
+                  </li>
+                  <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+                    <a class="nav-link" ui-sref="login">Login</a>
+                  </li>
+                  <li class="nav-item" ng-if="main.currentUser">
+                    <a ng-click="main.logout()" class="nav-link">Logout</a>
+                  </li>  
+                </ul>
+              </nav>   
+        </header>  
+      <h1>Pet Friendly App</h1>
+    </div>    
+  <div class="container" ng-if="main.errorMessage">
+    <div class="alert alert-danger">{{ main.errorMessage }}</div>
+  </div> 
   <main ui-view></main>
 
 </body>
