--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
   <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
+
+
   <script src="/js/app.js"></script>
 
+
+  <script src="/js/controllers/pets/new.js"></script>
+  <script src="/js/controllers/pets/edit.js"></script>
+  <script src="/js/controllers/pets/show.js"></script>
   <script src="/js/controllers/pets/index.js"></script>
+
+<!--   <script src="/js/controllers/reviews/edit.js"></script>
+  <script src="/js/controllers/reviews/new.js"></script>
+  <script src="/js/controllers/reviews/index.js"></script>
+  <script src="/js/controllers/reviews/show.js"></script> -->
+
   <script src="/js/controllers/main.js"></script>
   <script src="/js/controllers/login.js"></script>
   <script src="/js/controllers/register.js"></script>
@@ -16,9 +29,6 @@
   <script src="/js/models/user.js"></script>
   <script src="/js/services/tokenService.js"></script>
   <script src="/js/services/authInterceptor.js"></script>
-
-  <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
-
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
