--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,10 @@
   <script src="/js/controllers/pets/show.js"></script>
   <script src="/js/controllers/pets/index.js"></script>
 
-<!--   <script src="/js/controllers/reviews/edit.js"></script>
-  <script src="/js/controllers/reviews/new.js"></script>
   <script src="/js/controllers/reviews/index.js"></script>
+  <script src="/js/controllers/reviews/new.js"></script>
+
+<!--   <script src="/js/controllers/reviews/edit.js"></script>
   <script src="/js/controllers/reviews/show.js"></script> -->
 
   <script src="/js/controllers/main.js"></script>
@@ -27,6 +28,7 @@
   <script src="/js/controllers/register.js"></script>
   <script src="/js/models/pet.js"></script>
   <script src="/js/models/user.js"></script>
+  <script src="/js/models/review.js"></script>
   <script src="/js/services/tokenService.js"></script>
   <script src="/js/services/authInterceptor.js"></script>
 
@@ -42,7 +44,7 @@
               <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand" ui-sref="home">Pet App</a>
                 <ul class="nav navbar-nav">
-                  <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+                  <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
                     <a class="nav-link" ui-sref="index">Index</a>
                   </li>
                   <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
