--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
   <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
 
-
   <script src="/js/app.js"></script>
-
 
   <script src="/js/controllers/pets/new.js"></script>
   <script src="/js/controllers/pets/edit.js"></script>
@@ -19,9 +17,8 @@
 
   <script src="/js/controllers/reviews/index.js"></script>
   <script src="/js/controllers/reviews/new.js"></script>
-
-<!--   <script src="/js/controllers/reviews/edit.js"></script>
-  <script src="/js/controllers/reviews/show.js"></script> -->
+  <script src="/js/controllers/reviews/show.js"></script>      
+  <script src="/js/controllers/reviews/edit.js"></script>
 
   <script src="/js/controllers/main.js"></script>
   <script src="/js/controllers/login.js"></script>
