--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,15 @@
 <html ng-app="wdi-project-3">
 <head>
   <title>Pet Friendly App</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChhqTMm_E2NqS9nk65tq9PaV-O5jR4Ytc"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
   <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
-
+ 
   <script src="/js/app.js"></script>
+
+  <script src="/js/directives/gmap.js"></script>
 
   <script src="/js/controllers/pets/new.js"></script>
   <script src="/js/controllers/pets/edit.js"></script>
@@ -42,7 +45,7 @@
                 <a class="navbar-brand" ui-sref="home">Pet App</a>
                 <ul class="nav navbar-nav">
                   <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
-                    <a class="nav-link" ui-sref="index">Index</a>
+                    <a class="nav-link" ui-sref="reviewsIndex">Reviews</a>
                   </li>
                   <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
                     <a class="nav-link" ui-sref="register">Register</a>
