--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html ng-app="wdi-project-3">
 <head>
   <title>Pet Friendly App</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChhqTMm_E2NqS9nk65tq9PaV-O5jR4Ytc"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChhqTMm_E2NqS9nk65tq9PaV-O5jR4Ytc&libraries=places"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
   <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -12,6 +12,7 @@
   <script src="/js/app.js"></script>
 
   <script src="/js/directives/gmap.js"></script>
+  <script src="/js/directives/places-autocomplete.js"></script>
 
   <script src="/js/controllers/pets/new.js"></script>
   <script src="/js/controllers/pets/edit.js"></script>
@@ -22,6 +23,8 @@
   <script src="/js/controllers/reviews/new.js"></script>
   <script src="/js/controllers/reviews/show.js"></script>      
   <script src="/js/controllers/reviews/edit.js"></script>
+  <script src="/js/controllers/map.js"></script>
+
 
   <script src="/js/controllers/main.js"></script>
   <script src="/js/controllers/login.js"></script>
@@ -59,7 +62,7 @@
                 </ul>
               </nav>   
         </header>  
-      <h1>Pet Friendly App</h1>
+      
     </div>    
   <div class="container" ng-if="main.errorMessage">
     <div class="alert alert-danger">{{ main.errorMessage }}</div>
