--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <header>
           <nav>  
             <div class="container">
-              <nav class="navbar navbar-light bg-faded">
+              <nav class="navbar navbar">
                 <a class="navbar-brand" ui-sref="home">Pet App</a>
                 <ul class="nav navbar-nav">
                   <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
