--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
   <main ng-controller="MainController as main">
@@ -48,7 +50,7 @@
           <nav>  
             <div class="container">
               <nav class="navbar navbar">
-                <a class="navbar-brand" ui-sref="home">Pet App</a>
+                <a class="navbar-brand" ui-sref="home"><img src="/images/dogpaw_icon.png" alt="dog paw" height= "48" width="48"></a>
                 <ul class="nav navbar-nav">
                   <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
                     <a class="nav-link" ui-sref="reviewsIndex">Reviews</a>
@@ -74,6 +76,18 @@
     <div class="alert alert-danger">{{ main.errorMessage }}</div>
   </div> 
   <main ui-view></main>
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
