--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html ng-app="wdi-project-3">
 <head>
-  <title>Pet Friendly App</title>
+  <title>Paws Allowed</title>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChhqTMm_E2NqS9nk65tq9PaV-O5jR4Ytc&libraries=places"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
@@ -42,6 +42,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+
 </head>
 <body>
   <main ng-controller="MainController as main">
@@ -76,17 +78,6 @@
     <div class="alert alert-danger">{{ main.errorMessage }}</div>
   </div> 
   <main ui-view></main>
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
